Replace postgres image for vps deployments

--- a/deployment/vps/docker-compose.yml
+++ b/deployment/vps/docker-compose.yml
@@ -1,8 +1,11 @@
+name: phenom
 services:
   phenom_postgres:
-    image: pgvector/pgvector:pg17
+    image: postgres:17.7-alpine
     container_name: phenom_postgres
     restart: always
+    env_file:
+      - ${PWD}/.env
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
@@ -23,7 +26,6 @@ services:
     build:
       context: ${PWD}
       dockerfile: Dockerfile
-    container_name: phenom
     restart: always
     networks:
       - nginx_network
